--- a/src/components/sidebarMenu/SidebarMenu.module.css
+++ b/src/components/sidebarMenu/SidebarMenu.module.css
@@ -6,6 +6,24 @@
   padding-left: 16px;
   font-family: 'SF Pro Display';
   position: relative;
+  box-shadow: rgba(0, 0, 0, 0.1);
+}
+
+@media (max-width: 768px) {
+  .sidebar {
+    padding-left: 10px;
+  }
+}
+
+.drawerContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 16px;
+}
+
+.drawerContent .menu {
+  width: 100%;
 }
 
 .logoProfileSectionWrapper {
@@ -14,6 +32,13 @@
   padding-bottom: 10px;
   padding-left: 20px;
   padding-right: 20px;
+}
+
+@media (max-width: 768px) {
+  .logoProfileSectionWrapper {
+    padding-top: 0px;
+    display: none;
+  }
 }
 
 .logoSection {
@@ -48,11 +73,19 @@
 }
 
 .profileName {
-  margin-right: 20px;
+  margin-right: 47.41px;
   color: #053559;
   font-size: 18px;
   font-family: 'SF Pro Display';
   font-weight: 700;
+}
+
+.profileNameContainer > img {
+  display: flex;
+  align-items: center;
+  height: 18px;
+  width: 9.18px;
+  cursor: pointer;
 }
 
 .influencerType {
@@ -69,19 +102,50 @@
   scrollbar-width: thin;
 }
 
+@media (max-width: 768px) {
+  .scrollableContent {
+    padding-top: 0px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
 .menu {
   margin-bottom: 28px;
-  font-weight: 500;
-  font-family: 'SF Pro Display';
   width: 246px;
   border-right: none !important;
 }
 
+.menu > li {
+  font-weight: 500;
+  font-family: 'SF Pro Display' !important;
+  padding-left: 0 !important;
+}
+
+.menu > li > img {
+  margin-left: 5px;
+  color: #fff;
+}
+
 .campaignShortcuts {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   margin-bottom: 10px;
   width: 246px;
+}
+
+.campaignShortcuts > span {
+  font-weight: 500;
+  color: #0d1821 !important;
+  font-family: 'SF Pro Display' !important;
+  font-style: normal !important;
+}
+
+@media (max-width: 768px) {
+  .campaignShortcuts {
+    width: 100%;
+  }
 }
 
 .campaignShortcuts > button {
