worked on dashboard content

--- a/src/components/sortComponent/SortComponent.module.css
+++ b/src/components/sortComponent/SortComponent.module.css
@@ -1,6 +1,6 @@
 .sortContainer {
   width: 100%;
-  margin-bottom: 16px;
+  /* margin-bottom: 16px; */
   display: flex;
   justify-content: flex-end;
   align-items: center;
