--- a/src/components/searchInput/SearchComponent.module.css
+++ b/src/components/searchInput/SearchComponent.module.css
@@ -1,6 +1,7 @@
 .inputContainer {
   position: relative;
-  width: 450px;
+  max-width: 450px;
+  width: 100%;
   overflow: hidden;
 }
 
@@ -12,6 +13,7 @@
   border: none;
   height: 50px;
   border-radius: 8px;
+  padding-left: 6px;
 }
 
 .searchInput::placeholder {
