--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,10 @@ body {
   padding: 0px 0px 9px 0px !important;
 }
 
+/* .ant-list-item {
+  background-color: red;
+} */
+
 /* .ant-layout-header {
   background: inherit;
 }
@@ -56,20 +60,11 @@ body {
   padding: 20px;
 } */
 
-.financial-profile-section {
-  margin-bottom: 20px;
-}
-
-.search-sort-section {
+.dashboardSearchContainer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 20px;
-}
-
-.sort-by {
-  display: flex;
-  align-items: center;
+  margin: 30px 0 0 0;
 }
 
 .list-grid-icons i {
@@ -86,4 +81,9 @@ body {
   .sort-by {
     margin-top: 10px;
   }
+}
+
+.list-view .ant-card {
+  width: 100%;
+  margin-bottom: 16px;
 }
