working on search functionality

--- a/src/components/profileInformation/ProfileInformation.module.css
+++ b/src/components/profileInformation/ProfileInformation.module.css
@@ -1,7 +1,7 @@
 .profileInfoCard {
   border-radius: 16px;
   padding: 0px 10px;
-  border: 1px solid #bfbfbf;
+  border: 1px solid #053559;
 }
 
 .profileInfoCard .ant-card-head-title {
