--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,7 @@ body {
 
 .dashboardSearchContainer {
   display: flex;
+  width: 100%;
   justify-content: space-between;
   align-items: center;
   margin: 30px 0 0 0;
