--- a/src/components/campain/createCampaignForm/CreateCampaignForm.module.css
+++ b/src/components/campain/createCampaignForm/CreateCampaignForm.module.css
@@ -7,7 +7,7 @@
   font-size: 24px;
   font-weight: 500;
   line-height: 38.4px;
-  color: #001529;
+  color: var(--color-dark-blue);
   font-family: 'SF Pro Display';
   margin-bottom: 16px;
 }
@@ -15,8 +15,7 @@
 .label {
   font-weight: 500;
   font-size: 14px;
-  color: #001529;
-  font-weight: 500;
+  color: var(--color-dark-blue);
   line-height: 25.6px;
 }
 
@@ -24,13 +23,13 @@
   height: 40px;
   padding: 8px 12px;
   border-radius: 4px;
-  border: 1px solid #d9d9d9;
+  border: 1px solid var(--color-light-gray);
 }
 
 .textArea {
   border-radius: 4px;
   padding: 8px 12px;
-  border: 1px solid #d9d9d9;
+  border: 1px solid var(--color-light-gray);
   height: 150px;
 }
 
@@ -60,14 +59,14 @@
   font-size: 24px;
   height: 48px;
   width: 48px;
-  color: #888;
+  color: var(--color-gray);
   margin-top: 0;
   margin-right: 0;
   cursor: pointer;
 }
 
 .icon:hover {
-  color: #001529;
+  color: var(--color-dark-blue);
 }
 
 .submitButtonWrapper {
@@ -79,7 +78,7 @@
 
 .submitButton {
   font-family: 'SF Pro Display';
-  background-color: #001529;
+  background-color: var(--color-dark-blue);
   height: 40px;
   width: 284px;
   border-radius: 4px;
@@ -87,12 +86,12 @@
 
 .submitButton > button {
   font-family: 'SF Pro Display';
-  background-color: #001529;
+  background-color: var(--color-dark-blue);
   font-size: 16px;
-  color: #fff;
+  color: var(--color-white);
   border: none;
 }
 
 .submitButton > button:hover {
-  background-color: #002a80;
+  background-color: var(--color-dark-blue-hover);
 }
