--- a/src/components/sidebarMenu/SidebarMenu.module.css
+++ b/src/components/sidebarMenu/SidebarMenu.module.css
@@ -2,11 +2,11 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  background: #fff;
+  background: var(--color-background);
   padding-left: 16px;
-  font-family: 'SF Pro Display';
+  font-family: var(--font-family-sf);
   position: relative;
-  box-shadow: rgba(0, 0, 0, 0.1);
+  box-shadow: var(--color-shadow);
 }
 
 @media (max-width: 768px) {
@@ -28,7 +28,7 @@
 
 .logoProfileSectionWrapper {
   padding-top: 30px;
-  background: #fff;
+  background: var(--color-background);
   padding-bottom: 10px;
   padding-left: 20px;
   padding-right: 20px;
@@ -74,9 +74,9 @@
 
 .profileName {
   margin-right: 47.41px;
-  color: #053559;
+  color: var(--color-primary);
   font-size: 18px;
-  font-family: 'SF Pro Display';
+  font-family: var(--font-family-sf);
   font-weight: 700;
 }
 
@@ -90,7 +90,7 @@
 
 .influencerType {
   font-size: 12px;
-  color: #0d1821;
+  color: var(--color-secondary);
 }
 
 .scrollableContent {
@@ -118,7 +118,7 @@
 
 .menu > li {
   font-weight: 500;
-  font-family: 'SF Pro Display' !important;
+  font-family: var(--font-family-sf) !important;
   padding-left: 0 !important;
 }
 
@@ -137,8 +137,8 @@
 
 .campaignShortcuts > span {
   font-weight: 500;
-  color: #0d1821 !important;
-  font-family: 'SF Pro Display' !important;
+  color: var(--color-secondary) !important;
+  font-family: var(--font-family-sf) !important;
   font-style: normal !important;
 }
 
@@ -150,7 +150,7 @@
 
 .campaignShortcuts > button {
   background-color: #e7f5ff;
-  color: #053559;
+  color: var(--color-primary);
 }
 
 .listItem {
@@ -158,7 +158,7 @@
 }
 
 .listItemTitle {
-  color: #0d1821;
-  font-family: 'SF Pro Display';
+  color: var(--color-secondary);
+  font-family: var(--font-family-sf);
   font-size: 13px;
 }
