--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,34 @@
 @import url('https://fonts.cdnfonts.com/css/sf-pro-display');
 
+:root {
+  --color-primary: #053559;
+  --color-secondary: #0d1821;
+  --color-background: #ffffff;
+  --color-light-blue-background: #e7f5ff;
+  --color-white: #fff;
+  --color-text-light: #e9e9e9;
+  --color-text-dark: #000000;
+  --color-shadow: rgba(0, 0, 0, 0.1);
+  --color-overlay: rgba(0, 39, 102, 0.8);
+  --font-family-sf: 'SF Pro Display', sans-serif;
+  --font-family-neue: 'Neue Montreal';
+  --color-dark-blue: #001529;
+  --color-light-gray: #d9d9d9;
+  --color-gray: #888;
+  --color-medium-gray: #737373;
+  --color-dark-blue-hover: #002a80;
+}
+
 body {
   margin: 0 !important;
   box-sizing: border-box;
   min-height: 100vh;
-  font-family: 'SF Pro Display', sans-serif;
+  font-family: var(--font-family-sf);
 }
 
 .ant-menu-item-selected {
-  background-color: #053559 !important;
-  color: white !important;
+  background-color: var(--color-primary) !important;
+  color: var(--color-text-light) !important;
 }
 
 .ant-list-item-meta {
@@ -22,14 +41,15 @@ body {
 }
 
 .ant-list-item-meta-title > a {
-  font-family: 'SF Pro Display', sans-serif !important;
-  color: #0d1821 !important;
+  font-family: var(--font-family-sf) !important;
+  color: var(--color-secondary) !important;
   font-weight: 400 !important;
 }
 
 .ant-drawer-header-title {
   justify-content: flex-end;
 }
+
 .ant-drawer-title {
   display: none;
 }
@@ -42,23 +62,15 @@ body {
   padding: 0px 0px 9px 0px !important;
 }
 
-/* .ant-list-item {
-  background-color: red;
-} */
-
-/* .ant-layout-header {
-  background: inherit;
+.ant-progress-text {
 }
 
-@media (min-width: 769px) {
-  .ant-layout-header {
-    background: none !important;
+@media (max-width: 999px) {
+  .ant-layout {
+    background: var(--color-background);
+    box-shadow: var(--color-shadow);
   }
-} */
-
-/* .dashboard-container {
-  padding: 20px;
-} */
+}
 
 .dashboardSearchContainer {
   display: flex;
