--- a/src/layouts/dashboardLayout/DashBoardLayout.module.css
+++ b/src/layouts/dashboardLayout/DashBoardLayout.module.css
@@ -21,12 +21,21 @@
   left: 326px;
   right: 0;
   z-index: 1;
-  background: #fff;
+  background: var(--color-background);
   padding: 0 16px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   z-index: 1000;
+}
+
+@media (max-width: 999px) {
+  .header {
+    position: relative;
+    left: 0;
+    width: 100%;
+    margin-left: 0;
+  }
 }
 
 .mobileContentLayout {
