--- a/src/components/sidebarMenu/SidebarMenu.module.css
+++ b/src/components/sidebarMenu/SidebarMenu.module.css
@@ -5,7 +5,7 @@
   background: var(--color-background);
   padding-left: 16px;
   font-family: var(--font-family-sf);
-  position: relative;
+  position: relative !important;
   box-shadow: var(--color-shadow);
 }
 
@@ -37,12 +37,39 @@
 @media (max-width: 768px) {
   .logoProfileSectionWrapper {
     padding-top: 0px;
-    display: none;
+    padding-top: 40px;
+    position: fixed;
+    max-width: 1000px;
+    top: 0;
+    left: 0;
+    right: 140px;
+    z-index: 9999 !important;
   }
 }
 
+@media (max-width: 768px) {
+  .logoProfileSectionWrapper {
+    padding-top: 0px;
+    padding-top: 40px;
+    position: fixed;
+    max-width: 1000px;
+    top: 0;
+    left: 0;
+    right: 140px;
+    z-index: 9999 !important;
+  }
+}
+
+/* @media (max-width: 650px) {
+  .logoProfileSectionWrapper {
+    right: 100px;
+  }
+} */
+
 .logoSection {
   margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .title {
@@ -100,6 +127,13 @@
   padding-left: 20px;
   padding-right: 20px;
   scrollbar-width: thin;
+  padding-bottom: 40px;
+}
+
+@media (max-width: 768px) {
+  .scrollableContent {
+    /* overflow-y: hidden; */
+  }
 }
 
 @media (max-width: 768px) {
@@ -107,6 +141,12 @@
     padding-top: 0px;
     padding-left: 10px;
     padding-right: 10px;
+  }
+}
+
+@media (max-width: 769px) {
+  .scrollableContent {
+    padding-top: 160px;
   }
 }
 
@@ -124,7 +164,7 @@
 
 .menu > li > img {
   margin-left: 5px;
-  color: #fff;
+  color: var(--color-white);
 }
 
 .campaignShortcuts {
